navigate all pages

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,6 +13,8 @@ ul {
   display: flex;
 }
 
+
+
 li {
   list-style: none;
   padding: 1rem;
@@ -20,4 +22,12 @@ li {
   font-size: 16px;
   font-weight: 500;
   margin-top: 0;
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+}
+ a:hover{
+  color:darkblue ;
 }
