--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -30,6 +30,13 @@ nav li {
   margin-top: 0;
 }
 
+nav a{
+  text-decoration: none;
+  color: #000;
+}
+nav a:hover{
+  color:darkblue ;
+}
 .icons {
   
   padding: 0.5rem;
